@@ -1,10 +1,16 @@
-﻿Tutorial00
+﻿       Zey_S : |
+       Tutorial
+       Zey_E : |
+
+//z 2015-10-20 16:45:40 L.72 '26060 T3071510221.K BG57IV3
+todo : 2015-10-20 16:46 至 月底（ 2015-10-31 ）看完
+
+Tutorial00 Win32 Basics done 2015-10-20 11:09
     2015-10-20 11:09 浏览    
-Tutorial01
+Tutorial01 Direct3D 10 Basics done 2015-10-20 13:43
     2015-10-20 13:43 learn & comment
-Tutorial02  Tutorial 2: Rendering a Triangle
-    
-Tutorial03
+Tutorial02 Rendering a Triangle 2015-10-20 16:53
+Tutorial03 Shaders and Effect System
 Tutorial04
 Tutorial05
 Tutorial06
